# setup_celery_rabbitmq

./: README.md  pyproject.toml
src/: main.py  tasks.py
